# whatsapp-auto-message

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-docker.yaml  update-requirements.yaml
whatsapp-auto-message/: argparser.py  messageManager.py
whatsappMessanger/: browser.py  messanger.py  myArgparser.py  tools.py
